tests/baselines/reference/autoLift2.errors.txt
tests/cases/compiler/autoLift2.ts(5,14): error TS2339: Property 'foo' does not exist on type 'A'.
tests/cases/compiler/autoLift2.ts(5,17): error TS1005: ';' expected.
tests/cases/compiler/autoLift2.ts(5,19): error TS2552: Cannot find name 'any'. Did you mean 'NaN'?
tests/cases/compiler/autoLift2.ts(6,14): error TS2551: Property 'bar' does not exist on type 'A'. Did you mean 'baz'?
tests/cases/compiler/autoLift2.ts(6,17): error TS1005: ';' expected.
tests/cases/compiler/autoLift2.ts(6,19): error TS2552: Cannot find name 'any'. Did you mean 'NaN'?
tests/cases/compiler/autoLift2.ts(12,11): error TS2339: Property 'foo' does not exist on type 'A'.
tests/cases/compiler/autoLift2.ts(14,11): error TS2551: Property 'bar' does not exist on type 'A'. Did you mean 'baz'?
tests/cases/compiler/autoLift2.ts(16,33): error TS2339: Property 'foo' does not exist on type 'A'.
tests/cases/compiler/autoLift2.ts(18,33): error TS2551: Property 'bar' does not exist on type 'A'. Did you mean 'baz'?


==== tests/cases/compiler/autoLift2.ts (10 errors) ====
    class A
    
    {
        constructor() {
            this.foo: any;
                 ~~~
!!! error TS2339: Property 'foo' does not exist on type 'A'.
                    ~
!!! error TS1005: ';' expected.
                      ~~~
!!! error TS2552: Cannot find name 'any'. Did you mean 'NaN'?
            this.bar: any;
                 ~~~
!!! error TS2551: Property 'bar' does not exist on type 'A'. Did you mean 'baz'?
                    ~
!!! error TS1005: ';' expected.
                      ~~~
!!! error TS2552: Cannot find name 'any'. Did you mean 'NaN'?
        }
    
    
      baz() {
    
         this.foo = "foo";
              ~~~
!!! error TS2339: Property 'foo' does not exist on type 'A'.
    
         this.bar = "bar";
              ~~~
!!! error TS2551: Property 'bar' does not exist on type 'A'. Did you mean 'baz'?
    
         [1, 2].forEach((p) => this.foo);
                                    ~~~
!!! error TS2339: Property 'foo' does not exist on type 'A'.
    
         [1, 2].forEach((p) => this.bar);
                                    ~~~
!!! error TS2551: Property 'bar' does not exist on type 'A'. Did you mean 'baz'?
    
      }
    
    }
    
    
    
    var a = new A();
    
    a.baz();
    
    
    